Some new features

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,7 @@ RoyalAssistant/bin/Release/RoyalAssistant.vshost.exe
 RoyalAssistant/bin/Release/SharpDX.Direct3D9.dll
 RoyalAssistant/bin/Release/SharpDX.dll
 RoyalAssistant/RoyalAssistant.suo
+RoyalAssistant/bin/Release/RoyalAssistant.vshost.exe.config
+RoyalAssistant/bin/Release/RoyalAssistant.vshost.exe.manifest
+RoyalAssistant/RoyalAssistant.suo
+RoyalAssistant/RoyalAssistant.suo
