Drawings, combo and SmoothMouse(TM)

--- a/RoyalZiggy/RoyalZiggy.csproj
+++ b/RoyalZiggy/RoyalZiggy.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SmoothMouse.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5,Profile=Client">
